[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "llm-replay-proxy"
version = "0.1.0"
description = "Record and replay OpenAI-compatible API calls for deterministic local tests."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Mert Efe Kurt" }]
keywords = ["llm", "testing", "openai", "proxy", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<2",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[project.scripts]
llm-replay = "llm_replay_proxy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_replay_proxy"]

[tool.pytest.ini_options]
addopts = "--cov=llm_replay_proxy --cov-report=term-missing --cov-fail-under=85"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
